# spark-dev

./: .dockerignore  .env  .env.example  .gitignore  01_csv_to_iceberg.ipynb  01_setup_tables.ipynb  02_streaming_to_iceberg.ipynb  04_sales_streaming_to_iceberg.ipynb  CLAUDE.md  DockerFile  Dockerfile  Makefile  README.md  docker-compose.yml  main.py  producer.py  pyproject.toml  requirements.txt  sales_producer.py  start-kafka.sh  start-spark.sh  start.sh
airflow/: README.md  passwords.json  pyproject.toml
airflow/dags/: af10_dbt_spark_e2e.py  af1_idempotency.py  af2_execution_model.py  af3_catchup_backfill.py  af4_retries_sla.py  af5_sensor_modes.py  af6_trigger_rules_branching.py  af7_dynamic_mapping.py  af8_xcom_limits.py  af9_assets_data_aware.py
app/data/source/: customers.csv
app/notebooks/: 01_setup_tables.ipynb  02_streaming_to_iceberg.ipynb  03_query_iceberg.ipynb  04_sales_streaming_to_iceberg.ipynb  Spark DataFrame.ipynb  Untitled.ipynb
app/utils/: producer.py  spark_session.py
capstone/: README.md
capstone/incident_simulator/: README.md  inc6_late_data.md  inc7_backfill_double_count.md
common/: cdc_helpers.py  iceberg_meta.py  metrics_diff.py  profiles.py  spark_session.py
conf/: log4j2.properties  metrics.properties  prometheus.yml  spark-defaults.conf
conf/profiles/: constrained.env  tuned.env
data/: orders.csv
dbt/: dbt_project.yml  profiles.yml
dbt/dbt-polyglot/: CHANGELOG.md  README.md  pyproject.toml
dbt/dbt-polyglot/src/dbt_polyglot/: __init__.py
dbt/dbt-spark-transpile/: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  dbt_spark_transpile.pth  dbt_spark_transpile.py  pyproject.toml  setup.py  transpile_check.py
dbt/dbt-spark-transpile/.github/workflows/: ci.yml
dbt/dbt-spark-transpile/tests/: test_transpile.py
dbt/macros/: generate_schema_name.sql  surrogate_key.sql  test_non_negative.sql
dbt/models/: _exposures.yml  _sources.yml
dbt/models/marts/: _contract__models.yml  _marts__models.yml  _quality__models.yml  agg_customers.sql  agg_customers_iceberg.sql  dim_customers.sql  dim_orders_contract.sql  dim_orders_keyed.sql  fct_orders_evolving.sql  high_value_orders.sql  orders_clean.sql  orders_quarantine.sql  poc_dialect_demo.sql
dbt/models/staging/: _staging__models.yml  snap_customers_src.sql  stg_customers.sql  stg_orders_quality.sql
dbt/quality/: README.md  dbt10_macros_slim_ci.md  dbt1_materializations.md  dbt2_incremental.md  dbt3_late_arriving.md  dbt4_snapshots_scd2.md  dbt5_schema_change.md  dbt6_testing_strategy.md  dbt7_quarantine.md  dbt8_expectations_ge.md  dbt9_sources_contracts.md
dbt/seeds/: _seeds__properties.yml  orders_quality_raw.csv
dbt/snapshots/: customers_snapshot.sql
dbt/tests/: assert_orders_reconcile.sql
debezium/: README.md
debezium/cdc_to_iceberg/: cdc7_upsert_pipeline.ipynb
debezium/connector_bringup/: cdc2_connector_bringup.ipynb
debezium/deletes_tombstones/: README.md  cdc6_deletes.ipynb
debezium/event_envelope/: README.md  cdc4_event_envelope.ipynb
debezium/failure_modes/: README.md  cdc9_failure_modes.ipynb
debezium/postgres_setup/: cdc1_logical_replication.ipynb
debezium/schema_evolution/: README.md  cdc8_schema_evolution.ipynb
debezium/snapshot_modes/: README.md  cdc3_snapshot_modes.ipynb
debezium/wal_growth/: README.md  cdc5_wal_growth.ipynb
docs/: CATALOG_ROUTING_DESIGN.md  COSMETIC_CHANGES.md  CURRICULUM_BRIEF.md  CURRICULUM_PLAN.md  LEARNING_PATH.md  OBSERVABILITY.md  SNOWFLAKE_ON_SPARK.md  TRANSPILE_COVERAGE.md
kafka/: README.md
kafka/backpressure/: README.md  str3_backpressure.ipynb
kafka/checkpoints/: README.md  str2_checkpoints.ipynb
kafka/consumer_groups/: README.md  kaf3_rebalancing.ipynb
kafka/consumer_lag/: README.md  kaf2_consumer_lag.ipynb
kafka/delivery_semantics/: README.md  kaf5_delivery.ipynb
kafka/partitioning/: README.md  kaf1_partitioning.ipynb
kafka/poison_pill/: README.md  kaf6_poison_pill.ipynb
kafka/retention/: README.md  kaf4_retention.ipynb
kafka/watermarking/: README.md  str1_watermarking.ipynb
quality/: README.md
quality/dbt10_macros_slim_ci/: README.md
quality/dbt1_materializations/: README.md
quality/dbt2_incremental/: README.md
quality/dbt3_late_arriving/: README.md
quality/dbt4_snapshots_scd2/: README.md
quality/dbt5_schema_change/: README.md
quality/dbt6_testing_strategy/: README.md
quality/dbt7_quarantine/: README.md
quality/dbt8_expectations_ge/: README.md
quality/dbt9_sources_contracts/: README.md
quality/great_expectations/: validate_table.py
scripts/: docker-entrypoint.sh
spark/adhoc/: analyse.ipynb
spark/aqe/: spk6_aqe.ipynb
spark/caching/: spk8_caching.ipynb
spark/driver_oom/: spk3_driver_oom.ipynb
spark/executor_oom/: spk2_executor_oom.ipynb
spark/skew/: spk1_data_skew.ipynb
spark_conf/: spark-defaults.conf
(+2 files in other folders)
