[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "dbt-polyglot"
version = "0.1.0"
description = "Compile-time SQL-dialect transpiler for dbt (via sqlglot): run models written in one dialect on another warehouse — Spark-first."
readme = "README.md"
requires-python = ">=3.9"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "SaketKumar" }]
keywords = ["dbt", "spark", "sqlglot", "snowflake", "sql", "transpile", "dialect", "polyglot"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: SQL",
    "Topic :: Database",
    "Topic :: Software Development :: Code Generators",
]
dependencies = [
    "sqlglot>=20.0",
    "dbt-core>=1.5",
]

[project.optional-dependencies]
test = ["pytest"]

[project.urls]
Homepage = "https://github.com/SaketKumar/dbt-polyglot"
Repository = "https://github.com/SaketKumar/dbt-polyglot"
Issues = "https://github.com/SaketKumar/dbt-polyglot/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
