[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "dbt-spark-transpile"
version = "0.1.0"
description = "Run a Snowflake (or other-dialect) dbt repo on Spark, unchanged — transpiles each model's SQL to Spark at dbt compile time via sqlglot."
readme = "README.md"
requires-python = ">=3.9"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "dbt-spark-transpile contributors" }]
keywords = ["dbt", "spark", "sqlglot", "snowflake", "sql", "transpile", "dialect"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: SQL",
    "Topic :: Database",
    "Topic :: Software Development :: Code Generators",
]
dependencies = [
    "sqlglot",
    "dbt-core",
]

[project.optional-dependencies]
# transpile_check.py talks to a Spark Thrift server over PyHive. Only needed to run the
# `dbt-spark-transpile-check` trust gate, not for the compile-time transpile itself.
check = ["pyhive[hive]"]
# Run the unit tests (no Spark required).
test = ["pytest"]

[project.scripts]
dbt-spark-transpile-check = "transpile_check:main"

[project.urls]
Homepage = "https://github.com/your-org/dbt-spark-transpile"
Repository = "https://github.com/your-org/dbt-spark-transpile"
Issues = "https://github.com/your-org/dbt-spark-transpile/issues"

[tool.setuptools]
# Two flat top-level modules. The `.pth` that auto-activates the patch is added to the
# wheel's purelib by the build_py shim in setup.py (see that file for why pyproject alone
# can't place a .pth on sys.path).
py-modules = ["dbt_spark_transpile", "transpile_check"]
